--- a/rejoigner_nous.html
+++ b/rejoigner_nous.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,7 +51,7 @@
     
       <div class="login-box"> 
         <h4>Devenir notre partenaire </h4>    
-        <form class="form" action="rejoignernous.php" method="POST">
+        <form class="form" action="rejoigner_nous.php" method="POST">
           <div>
          <div class="section1" style="display: flex;">
           <div class="part1">
@@ -78,7 +76,7 @@
               <label>Jours de disponibilté</label>
               </div>
               <div class="user-box">
-                <input type="text" name="heure_ouv" required="">
+                <input type="time" name="heure_ouv" required="">
                 <label>Heure d'ouverture</label>
                 </div>
         </div>
@@ -100,12 +98,12 @@
               <label>Adresse</label>
               </div>
               <div class="user-box">
-                <input type="text" name="stockage_d" required="">
+                <input type="text" name="pointrelais_d" required="">
                 <label>Capacitif stockage</label>
                 </div>
                
               <div class="user-box">
-                <input type="text" name="heure_ferm" required="">
+                <input type="time" name="heure_ferm" required="">
                 <label>Heure de fermeture</label>
                 </div>
         </div>
@@ -124,11 +122,11 @@
           <div>
               <p>Follow Us</p>
               <ul>
-                <li><a href="#"><img src="../images/icons8-facebook-48.png" alt=""></a></li>
-                <li><a href="#"><img src="../images/icons8-instagram-48.png" alt=""></a></li>
-                <li> <a href=""><img src="../images/icons8-linkedin-48.png" alt="instagram"></a></li>
-                <li> <a href="#"><img src="../images/icons8-twitter-48.png" alt="twitter"></a></li>
-                <li><a href="#"><img src="../images/icons8-pinterest-48.png" alt="pinterest"></a></li>
+                <li><a href="#"><img src="images/icons8-facebook-48.png" alt=""></a></li>
+                <li><a href="#"><img src="images/icons8-instagram-48.png" alt=""></a></li>
+                <li> <a href=""><img src="images/icons8-linkedin-48.png" alt="instagram"></a></li>
+                <li> <a href="#"><img src="images/icons8-twitter-48.png" alt="twitter"></a></li>
+                <li><a href="#"><img src="images/icons8-pinterest-48.png" alt="pinterest"></a></li>
               </ul>
           </div>
   </footer>
